@@ -1,5 +1,9 @@
 2007-12-12 Gian Mario Tagliaretti  <gianmt@gnome.org>
 
+	* demo/demo-poppler.py: Small change to test poppler_font_info_scan
+
+2007-12-12 Gian Mario Tagliaretti  <gianmt@gnome.org>
+
 	* poppler.override: Wrap poppler_font_info_scan
 
 2007-12-12 Gian Mario Tagliaretti  <gianmt@gnome.org>
